2001-03-22  Andy Hertzfeld  <andy@eazel.com>


	* libnautilus-extensions/nautilus-annotation.c:
	(calculate_checksum_callback), (process_digest_requests),
	(queue_file_digest_request):
	fixed race condition problem in the digest queuing
	
2001-03-22  Andy Hertzfeld  <andy@eazel.com>

	merged with head to create post-1_0_8 branch
	
	* Makefile.am:
	* components/Makefile.am:
	* components/rss-control/.cvsignore:
	* components/rss-control/Makefile.am:
	* components/rss-control/main.c: (rss_control_object_destroyed),
	(rss_control_make_object), (main):
	* components/rss-control/nautilus-rss-control.c:
	(nautilus_rss_control_initialize_class), (get_bonobo_properties),
	(set_bonobo_properties), (nautilus_rss_control_initialize),
	(free_rss_data_item), (nautilus_rss_control_clear_items),
	(nautilus_rss_control_destroy), (nautilus_rss_control_get_control),
	(nautilus_rss_control_set_title), (rss_logo_callback),
	(extract_items), (rss_read_done_callback), (load_rss_file),
	(nautilus_rss_control_set_uri), (rss_control_pixbuf_composite),
	(draw_rss_logo_image), (draw_rss_title), (draw_blue_line),
	(draw_rss_items), (nautilus_rss_control_draw),
	(nautilus_rss_control_expose),
	(nautilus_rss_control_set_prelight_index),
	(nautilus_rss_control_motion_event),
	(nautilus_rss_control_leave_event),
	(nautilus_rss_control_size_request),
	(nautilus_rss_control_button_press_event):
	* components/rss-control/nautilus-rss-control.h:
	* components/rss-control/nautilus-rss-control.oafinfo:
	* components/throbber/nautilus-throbber.c: (get_bonobo_properties),
	(set_bonobo_properties), (nautilus_throbber_initialize):
	* components/vcard/.cvsignore:
	* components/vcard/Makefile.am:
	* components/vcard/main.c: (vcard_object_destroyed),
	(vcard_make_object), (main):
	* components/vcard/nautilus-vcard.c:
	(nautilus_vcard_initialize_class), (get_bonobo_properties),
	(set_bonobo_properties), (nautilus_vcard_initialize),
	(nautilus_vcard_destroy), (nautilus_vcard_get_control),