@@ -1,5 +1,14 @@
-2001-03-22  Andy Hertzfeld  <andy@eazel.com>
+2001-03-23  Andy Hertzfeld  <andy@eazel.com>
 
+	* components/rss-control/nautilus-rss-control.c:
+	(nautilus_rss_control_initialize):
+	* src/file-manager/fm-icon-view.c: (annotate_callback),
+	(fm_icon_view_merge_menus), (fm_icon_view_update_menus):
+	* src/file-manager/nautilus-icon-view-ui.xml:
+	
+	added stubbed "Add Annotation" command
+
+2001-03-22  Andy Hertzfeld  <andy@eazel.com>
 
 	* libnautilus-extensions/nautilus-annotation.c:
 	(calculate_checksum_callback), (process_digest_requests),
